# iacdiscordnotifs

./: .env.example  .gitattributes  .gitignore  Cargo.toml  IacDiscordNotifs.sln  LICENSE  Procfile  README.md  app.json  fly.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  commitlint.yml  fly.yml  update-fork.yml
IacDiscordNotifs/: IacDiscordNotifs.csproj  Program.cs  StringUtils.cs
src/: main.rs
