[package]
name = "iacdiscordnotifs"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Caezar Itang <sitiom@proton.me>"]
description = "Listen to NEO LMS notifications from an email and forward it to a Discord webhook."
repository = "https://github.com/sitiom-misc/iacdiscordnotifs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.12.0"
serenity = "0.12"
chrono = "0.4.31"
regex = "1.10.3"
tokio = { version = "1.35.1", features = ["full"] }
dotenvy = "0.15.7"
futures = "0.3.30"
async-native-tls = { version = "0.5", default-features = false, features = ["runtime-tokio"]}
async-imap = { version = "0.9.5", default-features = false, features = ["runtime-tokio"]}
mailparse = "0.14.1"
scraper = "0.18.1"
mdka = "1.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true