[package]
name = "iacdiscordnotifs"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Caezar Itang <sitiom@proton.me>"]
description = "Listen to NEO LMS notifications from an email and forward it to a Discord webhook."
repository = "https://github.com/sitiom-misc/iacdiscordnotifs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.13.0"
serenity = "0.12"
chrono = "0.4.39"
chrono-tz = "0.10.0"
regex = "1.11.1"
tokio = { version = "1.43.1", features = ["full"] }
dotenvy = "0.15.7"
futures = "0.3.31"
async-native-tls = { version = "0.5", default-features = false, features = ["runtime-tokio"] }
async-imap = { version = "0.10.2", default-features = false, features = ["runtime-tokio"] }
mailparse = "0.15.0"
scraper = "0.22.0"
mdka = "1.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true